--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,9 @@ body {
 }
 
 .homepicture {
+
   box-shadow: inset 0 0 1em black, 0 0 1em white;  
-  width: 80%;
+  width: 60%;
 }
 
 .cityPicture{
@@ -15,7 +16,31 @@ body {
   height: 50%;
 }
 li {
-  list-style-type: none; 
+  list-style-type: none;
+  text-decoration: none;
 }
 
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 0 1em white;;
+  transition: 0.3s;
+  width: 80%;
+  border-radius: 5px;
+  margin: 10px;
+
+
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 0 1em rgb(199, 24, 24);
+  text-decoration: none;
+}
+img {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+}
+.jumbotron{
+  background-color: rgba(150, 150, 150, 0.6);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 0 1em rgb(0, 0, 0);;
+  color: black;
+}
 
